# docs/web/openapi.json
@@ -1992,7 +1992,11 @@
             "schema": {
               "anyOf": [
                 {
-                  "$ref": "#/components/schemas/OptionRight"
+                  "enum": [
+                    "C",
+                    "P"
+                  ],
+                  "type": "string"
                 },
                 {
                   "type": "null"
@@ -2181,7 +2185,11 @@
             "schema": {
               "anyOf": [
                 {
-                  "$ref": "#/components/schemas/OptionRight"
+                  "enum": [
+                    "C",
+                    "P"
+                  ],
+                  "type": "string"
                 },
                 {
                   "type": "null"
@@ -6545,8 +6553,8 @@
           "right": {
             "type": "string",
             "enum": [
-              "P",
-              "C"
+              "C",
+              "P"
             ],
             "title": "Right"
           },
@@ -6849,12 +6857,17 @@
           "right": {
             "anyOf": [
               {
-                "$ref": "#/components/schemas/OptionRight"
+                "type": "string",
+                "enum": [
+                  "C",
+                  "P"
+                ]
               },
               {
                 "type": "null"
               }
-            ]
+            ],
+            "title": "Right"
           },
           "outcome": {
             "anyOf": [
